--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "bcrypt": "^5.1.0",
+    "classnames": "^2.3.2",
     "framer-motion": "^10.12.12",
     "next": "13.4.3",
     "next-auth": "^4.22.1",
