--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "20.2.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "ahooks": "^3.7.7",
     "bcrypt": "^5.1.0",
     "classnames": "^2.3.2",
     "framer-motion": "^10.12.12",
