--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-highlight-words": "^0.20.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@total-typescript/ts-reset": "^0.4.2",
     "@types/bcrypt": "^5.0.0",
+    "@types/react-highlight-words": "^0.16.4",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
